--- a/index.html
+++ b/index.html
@@ -1,15 +1,53 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
+  <!-- ETIQUETAS META PARA POSICIONAMIENTO EN SEO-->
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="Estudio Jurídico Rodriguez y Asociados en Quilmes, Buenos Aires. Abogados con experiencia en despidos, accidentes de tránsito, derecho penal y laborales. Contactanos hoy mismo.">
+  <meta name="robots" content="index, follow">
+<!-- Open Graph -->
+<meta property="og:title" content="Rodriguez y Asociados | Estudio Jurídico en Quilmes">
+<meta property="og:description" content="Abogados en despidos, accidentes, penal y laborales. Consultanos hoy mismo.">
+<meta property="og:type" content="website">
+<meta property="og:url" content="PONER URL DEL SITIO WEB">
+<meta property="og:image" content="https://DOMINIO.COM/imagen-preview.jpg">
+
+<!-- Twitter Card -->
+<meta name="twitter:card" content="summary_large_image">
+<meta name="twitter:title" content="Rodriguez y Asociados | Estudio Jurídico en Quilmes">
+<meta name="twitter:description" content="Consultas por despidos, penal y accidentes. Abogados en Quilmes.">
+<meta name="twitter:image" content="https://DOMINIO.COM/imagen-preview.jpg">
+<!-- OTRAS CONFIGS DE SEO-->
+<script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "LegalService",
+    "name": "Rodriguez y Asociados",
+    "address": {
+      "@type": "PostalAddress",
+      "streetAddress": "Lavalle 695",
+      "addressLocality": "Quilmes",
+      "addressRegion": "Buenos Aires",
+      "postalCode": "1878",
+      "addressCountry": "AR"
+    },
+    "telephone": "+54 11 6118-8892",
+    "url": "https://tusitio.com",
+    "areaServed": "Quilmes, Buenos Aires",
+    "description": "Estudio jurídico en Quilmes especializado en despidos, accidentes y derecho penal."
+  }
+  </script>
+  
+
+
   <!-- TIPOGRAFIA: INRIA SANS (LIGHT, REGULAR, BOLD)-->
 
   <!--LINKEANDO FAVICON-->
   <link rel="shortcut icon" href="./src/assets/images/favicon.ico" type="image/x-icon">
   <!-- link con style.css-->
   <link rel="stylesheet" href="src/style.css">
-  <title>Doctores Rodriguez y Asociados</title>
+  <title>Rodriguez y Asociados | Estudio Jurídico en Quilmes, Buenos Aires</title>
 </head>
 <body class="bg-background flex flex-col min-h-screen">
   <div id="header-container" class="w-full bg-texto"></div>
