Armado de main.html, con sus configuraciones en main.js, index.html + creacion de los componentes a utilizar a futuro

--- a/index.html
+++ b/index.html
@@ -51,7 +51,10 @@
 </head>
 <body class="bg-background flex flex-col min-h-screen">
   <div id="header-container" class="w-full bg-texto"></div>
-  
+  <div id="main-container" class="w-full"></div>
+  <div id="sobrenos-container" class="w-full"></div>
+  <div id="servicios-container" class="w-full"></div>
+  <div id="footer-container" class="w-full bg-texto"></div>
 
 
 <script type="module" src="./src/main.js"></script>
