--- a/index.html
+++ b/index.html
@@ -41,7 +41,10 @@
   
 
 
-  <!-- TIPOGRAFIA: INRIA SANS (LIGHT, REGULAR, BOLD)-->
+  <!-- TIPOGRAFIA: Space Grotesk (LIGHT, REGULAR, BOLD)-->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@400;500;700&display=swap" rel="stylesheet">
 
   <!--LINKEANDO FAVICON-->
   <link rel="shortcut icon" href="./src/assets/images/favicon.ico" type="image/x-icon">
