Agregado de rounded a todos los botones y tarjetas para darle mejor estetica a la pagina

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@400;500;700&display=swap" rel="stylesheet">
 
   <!--LINKEANDO FAVICON-->
-  <link rel="shortcut icon" href="./src/assets/images/favicon.ico" type="image/x-icon">
+  <link rel="shortcut icon" href="./public/favicon.ico" type="image/x-icon">
   <!-- link con style.css-->
   <link rel="stylesheet" href="src/style.css">
   <title>Rodriguez y Asociados | Estudio Jurídico en Quilmes, Buenos Aires</title>
