ajustes en los componentes html y textos

--- a/index.html
+++ b/index.html
@@ -10,14 +10,14 @@
 <meta property="og:title" content="Rodriguez y Asociados | Estudio Jurídico en Quilmes">
 <meta property="og:description" content="Abogados en despidos, accidentes, penal y laborales. Consultanos hoy mismo.">
 <meta property="og:type" content="website">
-<meta property="og:url" content="PONER URL DEL SITIO WEB">
-<meta property="og:image" content="https://DOMINIO.COM/imagen-preview.jpg">
+<meta property="og:url" content="https://estudiodresrodriguez.com.ar">
+<meta property="og:image" content="https://estudiodresrodriguez.com.ar/imagen-preview.jpg">
 
 <!-- Twitter Card -->
 <meta name="twitter:card" content="summary_large_image">
 <meta name="twitter:title" content="Rodriguez y Asociados | Estudio Jurídico en Quilmes">
 <meta name="twitter:description" content="Consultas por despidos, penal y accidentes. Abogados en Quilmes.">
-<meta name="twitter:image" content="https://DOMINIO.COM/imagen-preview.jpg">
+<meta name="twitter:image" content="https://estudiodresrodriguez.com.ar/imagen-preview.jpg">
 <!-- OTRAS CONFIGS DE SEO-->
 <script type="application/ld+json">
   {
@@ -33,7 +33,7 @@
       "addressCountry": "AR"
     },
     "telephone": "+54 11 6118-8892",
-    "url": "https://tusitio.com",
+    "url": "https://estudiodresrodriguez.com.ar",
     "areaServed": "Quilmes, Buenos Aires",
     "description": "Estudio jurídico en Quilmes especializado en despidos, accidentes y derecho penal."
   }
