Arreglos en tarjetas de servicios y cambios de tipografia y tamaños

--- a/index.html
+++ b/index.html
@@ -42,12 +42,12 @@
 
 
   <!-- TIPOGRAFIA: Space Grotesk (LIGHT, REGULAR, BOLD)-->
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@400;500;700&display=swap" rel="stylesheet">
+  <!-- Google Fonts: Poppins (titulo) y Nunito (textos) -->
+<link href="https://fonts.googleapis.com/css2?family=Nunito:wght@400;600&family=Poppins:wght@600;700&display=swap" rel="stylesheet">
+
 
   <!--LINKEANDO FAVICON-->
-  <link rel="shortcut icon" href="./public/favicon.ico" type="image/x-icon">
+  <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
   <!-- link con style.css-->
   <link rel="stylesheet" href="src/style.css">
   <title>Rodriguez y Asociados | Estudio Jurídico en Quilmes, Buenos Aires</title>
