--- a/index.html
+++ b/index.html
@@ -60,6 +60,7 @@
   <div id="footer-container" class="w-full bg-texto"></div>
 
 
+  <!-- SCRIPT CON MAIN.JS-->
 <script type="module" src="./src/main.js"></script>
 <!-- Agregá Alpine.js para que funcione el menú -->
 <script src="https://cdn.jsdelivr.net/npm/alpinejs@3.x.x/dist/cdn.min.js" defer></script>
