mejora de identacion

--- a/index.html
+++ b/index.html
@@ -1,68 +1,93 @@
 <!DOCTYPE html>
 <html lang="es">
-<head>
-  <!-- ETIQUETAS META PARA POSICIONAMIENTO EN SEO-->
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="Estudio Jurídico Rodriguez y Asociados en Quilmes, Buenos Aires. Abogados con experiencia en despidos, accidentes de tránsito, derecho penal y laborales. Contactanos hoy mismo.">
-  <meta name="robots" content="index, follow">
-<!-- Open Graph -->
-<meta property="og:title" content="Rodriguez y Asociados | Estudio Jurídico en Quilmes">
-<meta property="og:description" content="Abogados en despidos, accidentes, penal y laborales. Consultanos hoy mismo.">
-<meta property="og:type" content="website">
-<meta property="og:url" content="https://estudiodresrodriguez.com.ar">
-<meta property="og:image" content="https://estudiodresrodriguez.com.ar/imagen-preview.jpg">
+  <head>
+    <!-- ETIQUETAS META PARA POSICIONAMIENTO EN SEO-->
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="Estudio Jurídico Rodriguez y Asociados en Quilmes, Buenos Aires. Abogados con experiencia en despidos, accidentes de tránsito, derecho penal y laborales. Contactanos hoy mismo."
+    />
+    <meta name="robots" content="index, follow" />
+    <!-- Open Graph -->
+    <meta
+      property="og:title"
+      content="Rodriguez y Asociados | Estudio Jurídico en Quilmes"
+    />
+    <meta
+      property="og:description"
+      content="Abogados en despidos, accidentes, penal y laborales. Consultanos hoy mismo."
+    />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://estudiodresrodriguez.com.ar" />
+    <meta
+      property="og:image"
+      content="https://estudiodresrodriguez.com.ar/imagen-preview.jpg"
+    />
 
-<!-- Twitter Card -->
-<meta name="twitter:card" content="summary_large_image">
-<meta name="twitter:title" content="Rodriguez y Asociados | Estudio Jurídico en Quilmes">
-<meta name="twitter:description" content="Consultas por despidos, penal y accidentes. Abogados en Quilmes.">
-<meta name="twitter:image" content="https://estudiodresrodriguez.com.ar/imagen-preview.jpg">
-<!-- OTRAS CONFIGS DE SEO-->
-<script type="application/ld+json">
-  {
-    "@context": "https://schema.org",
-    "@type": "LegalService",
-    "name": "Rodriguez y Asociados",
-    "address": {
-      "@type": "PostalAddress",
-      "streetAddress": "Lavalle 695",
-      "addressLocality": "Quilmes",
-      "addressRegion": "Buenos Aires",
-      "postalCode": "1878",
-      "addressCountry": "AR"
-    },
-    "telephone": "+54 11 6118-8892",
-    "url": "https://estudiodresrodriguez.com.ar",
-    "areaServed": "Quilmes, Buenos Aires",
-    "description": "Estudio jurídico en Quilmes especializado en despidos, accidentes y derecho penal."
-  }
-  </script>
-  
+    <!-- Twitter Card -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta
+      name="twitter:title"
+      content="Rodriguez y Asociados | Estudio Jurídico en Quilmes"
+    />
+    <meta
+      name="twitter:description"
+      content="Consultas por despidos, penal y accidentes. Abogados en Quilmes."
+    />
+    <meta
+      name="twitter:image"
+      content="https://estudiodresrodriguez.com.ar/imagen-preview.jpg"
+    />
+    <!-- OTRAS CONFIGS DE SEO-->
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "LegalService",
+        "name": "Rodriguez y Asociados",
+        "address": {
+          "@type": "PostalAddress",
+          "streetAddress": "Lavalle 695",
+          "addressLocality": "Quilmes",
+          "addressRegion": "Buenos Aires",
+          "postalCode": "1878",
+          "addressCountry": "AR"
+        },
+        "telephone": "+54 11 6118-8892",
+        "url": "https://estudiodresrodriguez.com.ar",
+        "areaServed": "Quilmes, Buenos Aires",
+        "description": "Estudio jurídico en Quilmes especializado en despidos, accidentes y derecho penal."
+      }
+    </script>
 
+    <!-- TIPOGRAFIA: Space Grotesk (LIGHT, REGULAR, BOLD)-->
+    <!-- Google Fonts: Poppins (titulo) y Nunito (textos) -->
+    <link
+      href="https://fonts.googleapis.com/css2?family=Nunito:wght@400;600&family=Poppins:wght@600;700&display=swap"
+      rel="stylesheet"
+    />
 
-  <!-- TIPOGRAFIA: Space Grotesk (LIGHT, REGULAR, BOLD)-->
-  <!-- Google Fonts: Poppins (titulo) y Nunito (textos) -->
-<link href="https://fonts.googleapis.com/css2?family=Nunito:wght@400;600&family=Poppins:wght@600;700&display=swap" rel="stylesheet">
+    <!--LINKEANDO FAVICON-->
+    <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon" />
+    <!-- link con style.css-->
+    <link rel="stylesheet" href="src/style.css" />
+    <title>
+      Rodriguez y Asociados | Estudio Jurídico en Quilmes, Buenos Aires
+    </title>
+  </head>
+  <body class="bg-background flex flex-col min-h-screen">
+    <div id="header-container" class="w-full bg-texto"></div>
+    <div id="main-container" class="w-full"></div>
+    <div id="sobrenos-container" class="w-full"></div>
+    <div id="servicios-container" class="w-full"></div>
+    <div id="footer-container" class="w-full bg-texto"></div>
 
-
-  <!--LINKEANDO FAVICON-->
-  <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
-  <!-- link con style.css-->
-  <link rel="stylesheet" href="src/style.css">
-  <title>Rodriguez y Asociados | Estudio Jurídico en Quilmes, Buenos Aires</title>
-</head>
-<body class="bg-background flex flex-col min-h-screen">
-  <div id="header-container" class="w-full bg-texto"></div>
-  <div id="main-container" class="w-full"></div>
-  <div id="sobrenos-container" class="w-full"></div>
-  <div id="servicios-container" class="w-full"></div>
-  <div id="footer-container" class="w-full bg-texto"></div>
-
-
-  <!-- SCRIPT CON MAIN.JS-->
-<script type="module" src="./src/main.js"></script>
-<!-- Agregá Alpine.js para que funcione el menú -->
-<script src="https://cdn.jsdelivr.net/npm/alpinejs@3.x.x/dist/cdn.min.js" defer></script>
-</body>
+    <!-- SCRIPT CON MAIN.JS-->
+    <script type="module" src="./src/main.js"></script>
+    <!-- Agregá Alpine.js para que funcione el menú -->
+    <script
+      src="https://cdn.jsdelivr.net/npm/alpinejs@3.x.x/dist/cdn.min.js"
+      defer
+    ></script>
+  </body>
 </html>
