mejora de identacion

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
     <!--LINKEANDO FAVICON-->
     <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon" />
     <!-- link con style.css-->
-    <link rel="stylesheet" href="src/style.css" />
+    <link rel="stylesheet" href="/src/style.css"/>
     <title>
       Rodriguez y Asociados | Estudio Jurídico en Quilmes, Buenos Aires
     </title>
