arreglos, cambios de color y demas

--- a/index.html
+++ b/index.html
@@ -76,11 +76,11 @@
     </title>
   </head>
   <body class="bg-background flex flex-col min-h-screen">
-    <div id="header-container" class="w-full bg-texto"></div>
+    <div id="header-container" class="w-full uppercase"></div>
     <div id="main-container" class="w-full"></div>
     <div id="sobrenos-container" class="w-full"></div>
     <div id="servicios-container" class="w-full"></div>
-    <div id="footer-container" class="w-full bg-texto"></div>
+    <div id="footer-container" class="w-full"></div>
 
     <!-- SCRIPT CON MAIN.JS-->
     <script type="module" src="./src/main.js"></script>
