--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 
     <!-- SCRIPT CON MAIN.JS-->
     <script type="module" src="./src/main.js"></script>
-    <!-- Agregá Alpine.js para que funcione el menú -->
+    <!--Alpine.js -->
     <script
       src="https://cdn.jsdelivr.net/npm/alpinejs@3.x.x/dist/cdn.min.js"
       defer
