--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <meta property="og:url" content="https://estudiodresrodriguez.com.ar" />
     <meta
       property="og:image"
-      content="https://estudiodresrodriguez.com.ar/imagen-preview.jpg"
+      content="https://estudiodresrodriguez.com.ar/image-preview.png"
     />
 
     <!-- Twitter Card -->
@@ -37,7 +37,7 @@
     />
     <meta
       name="twitter:image"
-      content="https://estudiodresrodriguez.com.ar/imagen-preview.jpg"
+      content="https://estudiodresrodriguez.com.ar/image-preview.png"
     />
     <!-- OTRAS CONFIGS DE SEO-->
     <script type="application/ld+json">
