--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
     />
 
     <!--LINKEANDO FAVICON-->
-    <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon" />
+    <link rel="shortcut icon" href="/favicon.png" type="image/x-icon" />
     <!-- link con style.css-->
     <link rel="stylesheet" href="/src/style.css" />
     <title>
